# do_bot

./: .gitignore  Dockerfile  README.md  bot.py  pyproject.toml  settings.py
app/: echo.py  periodic.py
app/parser/: digital_ocean.py
