[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.13.2",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Taras Nytiaha", email = "taras.nytiaha@gmail.com"},
]
dependencies = [
    "mypy>=1.3.0",
    "asyncio>=3.4.3",
    "aiogram==3.0.0b7",
    "setuptools>=67.7.2",
    "aiohttp>=3.8.4",
    "aiocron>=1.8",
    "aioredis>=2.0.1",
]
requires-python = ">=3.11"
license = {text = "MIT"}
